--- a/packages/foundations/scss/animation/_animations.scss
+++ b/packages/foundations/scss/animation/_animations.scss
@@ -81,7 +81,7 @@
 @keyframes accordion-open {
 	0% {
 		opacity: 0;
-		transform: translateY(-50%);
+		transform: translateY(-10%);
 	}
 
 	100% {
